--- a/index.html
+++ b/index.html
@@ -5,75 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>Virtual Keyboard</title>
-    <h1>Virtual Keyboard</h1>
+    
 </head>
 <body>
+    <h1>Virtual Keyboard</h1>
 
-    <div id="display">
-        
-    </div>
+<!----    <div class="keyboard">
+        <div class="keyboard_keys">
+            <button type="button" class="keyboard_key">a</button>
+            <button type="button" class="keyboard_key keyboard_key--wide">
+                <i class="material-icons">backspace</i>
+            </button>
+            <button type="button" class="keyboard_key keyboard_key--extra--wide">
+                <i class="material-icons">space_bar</i>
+            </button>
+            <button type="button" class="keyboard_key keyboard_key--wide keyboard_key--activatable">
+                <i class="material-icons">keyboard_capslock</i>
+            </button>
+            <button type="button" class="keyboard_key keyboard_key--wide keyboard_key--dark">
+                <i class="material-icons">check_circle</i>
+            </button>
+        </div>
+    </div> -->
 
-    <div id="keys">
-        <button id="one">1</button>
-        <button id="two">2</button>
-        <button id="three">3</button>
-        <button id="four">4</button>
-        <button id="five">5</button>
-        <button id="six">6</button>
-        <button id="seven">7</button>
-        <button id="eight">8</button>
-        <button id="nine">9</button>
-        <button id="zero">0</button>
-        <button id="delete">DELETE</button>
-
-        <br>
-
-        <button id="q">q</button>
-        <button id="w">w</button>
-        <button id="e">e</button>
-        <button id="r">r</button>
-        <button id="t">t</button>
-        <button id="y">y</button>
-        <button id="u">u</button>
-        <button id="i">i</button>
-        <button id="o">o</button>
-        <button id="p">p</button>
-
-        <br>
-
-        <button id="caps">CAPSLOCK</button>
-        <button id="a">a</button>
-        <button id="s">s</button>
-        <button id="d">d</button>
-        <button id="f">f</button>
-        <button id="g">g</button>
-        <button id="h">h</button>
-        <button id="j">j</button>
-        <button id="k">k</button>
-        <button id="l">l</button>
-        <button id="enter">ENTER</button>
-
-        <br>
-
-        <button id="shift">SHIFT</button>
-        <button id="z">z</button>
-        <button id="x">x</button>
-        <button id="c">c</button>
-        <button id="v">v</button>
-        <button id="b">b</button>
-        <button id="n">n</button>
-        <button id="m">m</button>
-        <button id="comma">,</button>
-        <button id="dot">.</button>
-        <button id="question">?</button>
-
-        <br>
-
-        <button id="space">SPACE</button>
-    </div>
-
-
+    <textarea style="position: absolute; top: 130px; right: 30px; width: 300px;"></textarea>
     <script src="script.js"></script>
+   
 </body>
 </html>
