--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <title>Virtual Keyboard</title>
     
 </head>
 <body>
     <h1>Virtual Keyboard</h1>
 
-<!----    <div class="keyboard">
+<!---   <div class="keyboard">
         <div class="keyboard_keys">
             <button type="button" class="keyboard_key">a</button>
             <button type="button" class="keyboard_key keyboard_key--wide">
