--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Virtual Keyboard</title>
-    
 </head>
 <body>
+    <div class="title">
     <h1>Virtual Keyboard</h1>
-
-    <textarea class="use-keyboard-input" style="position: absolute; top: 130px; right: 30px; width: 300px;"></textarea>
-    
+    </div>
+    <h2 style="position: absolute; top: 200px; right: 400px; width: 400px; height: 200px; color: rgba(70, 69, 69, 0.836);">Your Input Here! ----></h2>
+    <textarea class="use-keyboard-input" style="position: absolute; top: 130px; right: 100px; width: 400px; height: 200px;"></textarea>
     <script src="script.js"></script>
    
 </body>
