--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="title">
     <h1>Virtual Keyboard</h1>
     </div>
-    <h2 style="position: absolute; top: 200px; right: 400px; width: 400px; height: 200px; color: rgba(70, 69, 69, 0.836);">Your Input Here! ----></h2>
+    <h2 style="position: absolute; top: 200px; right: 400px; width: 400px; height: 200px; color: rgba(233, 162, 240, 0.945);">Your Input Here ---></h2>
     <textarea class="use-keyboard-input" style="position: absolute; top: 130px; right: 100px; width: 400px; height: 200px;"></textarea>
     <script src="script.js"></script>
    
